2005-06-03  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/main.cc (setup_localisation): Listen to LILYPOND_LOCALEDIR.

	* flower/file-path.cc (is_file, is_dir): Export.

	* lily/main.cc (prepend_env_path, set_env_file): Use them.

2005-06-02  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* lily/easy-notation.cc: Added include cctype to correct
	compilation error.

2005-06-02  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* Documentation/topdocs/NEWS.tely (Top): add entry about font family.

	* lily/dynamic-engraver.cc (acknowledge_grob): only center on
	parent if we have a notehead. Fixes incorrect offsets when
	Paper_column is very wide in the X direction.

	* input/regression/font-family-override.ly (Module): new file.

	* scm/font.scm (make-pango-font-tree): new function.

	* lily/beam.cc (before_line_breaking): remove warning about less
	than 2 visible stems. We still get a warning when there is only
	one stem.

2005-06-01  Werner Lemberg  <wl@gnu.org>

	* buildscripts/substitute-encoding.py: Handle PFAemmentaler-xx.pfa
	correctly.

2005-06-01  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/slur-scoring.cc (generate_avoid_offsets): new
	function. Generate avoid offsets once per slur.

	* lily/slur.cc (add_extra_encompass): add dependency to
	extra-encompass object. This fixes bugs/c-phrasing-slur.ly

	* lily/stencil.cc (is_empty): check dim_ field for is_empty()
	too. Fixes inf error with added bass notes.

	* scripts/lilypond-book.py (do_options): --psfonts doesn't take
	argument anymore.

	* make/ly-vars.make (DVIPS_FLAGS): use .psfonts as extension.

	* input/tutorial/lbook-latex-test.tex: add line length test.

	* scripts/lilypond-book.py (set_default_options): new
	function. Call this before dissecting snippets, so linewidth
	settings reach the snippets.

2005-06-01  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/lily.scm (PLATFORM, slashify): Remove double slashes.

2005-06-01  Han-Wen Nienhuys  <hanwen@xs4all.nl>
