@@ -62,6 +62,8 @@ Arjan Bos
 David Bobroff
 Bernard Hurley
 Bruce McIntyre
+Bruce Fairchild
+Daniel Johnson
 David Rogers
 Dylan Nicholson
 Ed Jackson
@@ -71,6 +73,7 @@ Gilles Sadowski
 Jack O'Quin
 Jeff Smith
 Johannes Schindelin
+John Mandereau
 Jose Miguel Pasini
 Josiah Boothby
 Juergen Reuter
@@ -81,6 +84,7 @@ Richard Schoeller
 Rob Platt
 Roman Stöckl-Schmidt
 Stephen McCarthy
+Sven Axelsson
 Tapio Tuovila
 Tom Cato Amundsen
 Will Oram
