@@ -33,6 +33,25 @@
   b4_Inc_state restore
 } bind def 
 
+
+%<font> <encoding> <name> reencode-font
+/reencode-font
+{
+    /name exch def
+    /encoding exch def
+    dup length
+    dict begin {
+	1 index /FID ne {def} {pop
+	pop} ifelse
+    }
+    forall
+    /Encoding encoding
+    def currentdict
+    end
+    name exch definefont
+} bind def
+
+
 % llx lly urx ury URI
 /mark_URI
 {
