@@ -151,13 +151,29 @@
 	 size cid?
 	 x-y-named-glyphs)
 
+  (define (encoding-vector-hack glyphs)
+    
+    ;; GS fucks up with glyphs that are not in the
+    ;; encoding vector.
+    (define (inner j glyphs)
+      (if (or (null? glyphs) (> j 256))
+	  '()
+	  (cons (format "dup ~a /~a put\n"
+			j (car glyphs))
+		(inner (1+ j) (cdr glyphs)))))
+	  
+    (format "256 array 0 1 255 { 1 index exch /.notdef put} for\n ~a
+/EncHack reencode-font /EncHack findfont"
+	    (apply string-append (inner 32 glyphs))))
+    ;; END HACK.
+  
   (format #f "gsave 1 output-scale div 1 output-scale div scale
   /~a ~a ~a scalefont setfont\n~a grestore"
 	  postscript-font-name
 	  (if cid?
 	      " /CIDFont findresource "
-	      " findfont") 
-	  
+	      " findfont")
+	
 	  size
 	  (apply
 	   string-append
